# bin2txt

./: .gitignore  CMakeLists.txt  README.md  bin.h  main.cpp  txt.h
